# gemma_penzai

./: README.md  pyproject.toml
gemma_penzai/: __init__.py
gemma_penzai/mllm/: __init__.py  load_gemma.py  sampling_mode.py  simple_decoding_loop.py
gemma_penzai/mllm/models/: __init__.py  gemma_multimodal.py  gemma_utils.py
gemma_penzai/vision/: __init__.py  convolution.py  image_utils.py  siglip.py  vision_layers.py  vision_parts.py
notebooks/: gemma3_multimodal_penzai.ipynb  gemma3_text_penzai.ipynb  gemma3_vision_penzai.ipynb
notebooks/mech_interp/: attention_and_logit_lens.ipynb  gemma_scope1.ipynb  gemma_scope2.ipynb
